# APKBuildToolCmakeProject

./: .gitignore  README.md
project/: CMakeLists.txt  README.md
project/build-tools/: README.md
project/build-tools/cmake/: FindAndroidSDK.cmake  UseBuildTools.cmake
project/build-tools/cmake/modules/: add_apktool_apk.cmake  install_apk.cmake
project/build-tools/examples/cmake-project/: CMakeLists.txt
project/etc/: keywords.txt
project/etc/keystore/: keystore.jks  keystore.properties
project/src/: AndroidManifest.xml  CMakeLists.txt  apktool.yml
project/src/assets/help/: changelog.html  changelog.json
project/src/original/: AndroidManifest.xml
project/src/res/drawable/: ic_kustom_logo_white_rounded.xml  ic_reddit_logo_rounded.xml  ic_section_animations.xml  ic_section_background.xml  ic_section_bitmap.xml  ic_section_curved_text.xml  ic_section_events.xml  ic_section_font_icon.xml  ic_section_fx.xml  ic_section_globals.xml  ic_section_layer.xml  ic_section_notification.xml  ic_section_paint.xml  ic_section_position.xml  ic_section_progress.xml  ic_section_progress_color.xml  ic_section_progress_style.xml  ic_section_series.xml  ic_section_series_style.xml  ic_section_shape.xml  ic_section_shortcuts.xml  ic_section_text.xml  kw_bg_toggle_pro_light.xml  kw_bg_view_border_light.xml  kw_list_divider_dark.xml  kw_list_divider_light.xml  kw_logo_badge.xml  kw_seekbar_progress_light.xml  kw_seekbar_thumb_light.xml  kwgt_widget_message_bg.xml
project/src/res/layout/: k_icon_list_item.xml  (+88 more)
project/src/unknown/: billing.properties  firebase-ads-lite.properties
(+12664 files in other folders)
